added text to html, without CSS styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <h1>The Guessing Game</h1><br>
+    <h2>Questions you have answered:</h2><br>
 
+      <p>How old am I?<br>Do I like skiing more than snowboarding?<br>If celery is the worst food on the planet? (I would think so)<br>Have I visited more than 10 countries?<br>Am I from Seattle?<br>Have I seen over 100 musical artists in a year?
+      </p>
   <script src="js/app.js"></script>
 </body>
 </html>
