finished javascript, added more to HTML. CSS lacking

--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
 </head>
 <body>
   <h1>The Guessing Game</h1><br>
-    <h2>Questions you have answered:</h2><br>
-
-      <p>How old am I?<br>Do I like skiing more than snowboarding?<br>If celery is the worst food on the planet? (I would think so)<br>Have I visited more than 10 countries?<br>Am I from Seattle?<br>Have I seen over 100 musical artists in a year?
+    <h2>Questions you have answered:</h2>
+      <ol>
+        <li>How old am I?</li>
+        <li>Do I like skiing more than snowboarding?</li>
+        <li>If celery is the worst food on the planet?</li>
+        <li>Have I visited more than 10 countries?</li>
+        <li>Am I from Seattle?</li>
+        <li> Have I seen over 100 musical artists in a year?</li>
+      </ol>
+      <h3>Some of my favorite video games</h3>
+      <ul>
+        <li>Dota 2 (Dota)</li>
+        <li>Super Smash Brothers Melee (ssbm)</li>
+        <li>Playerunkown's Battleground (pubg)</li>
+        <li>Rocket Leaguegit</li>
+      </ul>
+<h3>About me:</h3>
+      <p>I was born and raised in Fairbanks, Alaska. With long winters and small cities my life quickly started to revolve around technology, video games, and skiing. However, extreme temperatures and very little day light meant I spent less time on the slopes and more time building computers and playing games.
       </p>
+      <p>After leaving Alaska I made it a point to experience all of the things unavailble back home. I constantly travelled (so for work with the Navy), hopping from event to event, or planning trips with friends (turns out skiing is a lot better outside of Fairbanks). Post Navy I decided I want to continues to learn and experience new things, and as always, options were less available in Alaska</p>
+      <p>After deciding to make a career in software development, that has been my main goal since. First to San Diego for some education, and now finally to Seattle.</p>
   <script src="js/app.js"></script>
 </body>
 </html>
