typo fixes in html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>Dota 2 (Dota)</li>
         <li>Super Smash Brothers Melee (ssbm)</li>
         <li>Playerunkown's Battleground (pubg)</li>
-        <li>Rocket Leaguegit</li>
+        <li>Rocket League</li>
       </ul>
 <h3>About me:</h3>
       <p>I was born and raised in Fairbanks, Alaska. With long winters and small cities my life quickly started to revolve around technology, video games, and skiing. However, extreme temperatures and very little day light meant I spent less time on the slopes and more time building computers and playing games.
